<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_splash_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/logo_main_iclass_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/iclass_logo_content_description" />

        <TextView
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="iClass"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColorHint="@color/white">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/et_hint_login_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColorHint="@color/white">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/et_hint_login_password"/>
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/s_instructor_student"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Instructor"
            android:switchMinWidth="100dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/b_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/custom_button_background"
            android:text="@string/login_btn_label"/>

        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_user_label"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/b_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/custom_button_background"
            android:padding="12dp"
            android:text="@string/signup_btn_label"/>

        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_reminder_obligatory_field"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>